# rocprof_tests

./: .gitignore  CMakeLists.txt  README.md  hip_sample.cpp  requirements.txt  vcopy.cpp
rocm/: rocm-7.2.0.lua
toolchains/: adastra.mi250.7.2.0.cmake  adastra.mi250.amdclang.cmake  adastra.mi250.cray.cmake  droplet.mi300X.cmake
